--- a/templates/login.html
+++ b/templates/login.html
@@ -35,10 +35,14 @@
                 border-bottom-right-radius: .3rem;
             }
         }
+    
+      
+        
     </style>
 </head>
 
 <body class="bg-gradient-primary h-100">
+                                   
     <section class="gradient-form min-vh-100" style="background-color: #eee;">
         <div class="container py-5">
             <div class="row d-flex justify-content-center align-items-center">
@@ -53,7 +57,9 @@
                                     <br>
                                     {% block content %}
 
-                                    
+                                    {% if message %}
+                                    <div class="alert alert-danger alert-dismissible">{{ message }}</div>
+                                    {% endif %}
                                     <form method="post">
                                         {% csrf_token %}
                                         <p class="text-center">Please login to your account</p>
@@ -68,13 +74,7 @@
                                                     type="submit">Log in</button>
                                             <a class="text-muted" href="#!">Forgot password?</a>
                                         </div>
-                                        <!-- <div class="d-flex align-items-center justify-content-center pb-4">
-                                            <p class="mb-0 me-2">Don't have an account?</p>
-                                            <button type="button" class="btn btn-outline-danger btn-block">Create new</button>
-                                        </div> -->
                                     </form>
-                                    
-                                    
                                     
                                     {% endblock content %}
                                 </div>
