--- a/templates/fournisseur.html
+++ b/templates/fournisseur.html
@@ -173,6 +173,41 @@
                    {% comment %} Les modal de modification et de suppression {% endcomment %}
                 </tbody>
             </table>
+            <nav aria-label="Page navigation example">
+              <ul class="pagination">
+                  {% if fournisseurs.has_previous %}
+                      {% comment %} <li class="page-item"><a class="page-link" href="?page=1">1</a></li> {% endcomment %}
+                      <li class="page-item"><a class="page-link" href="?page={{ fournisseurs.previous_page_number }}">Précédent</a></li>
+                  {% endif %}
+                  
+                  {% if fournisseurs.number|add:"-3" > 2 %}
+                      <li class="page-item disabled"><span class="page-link">...</span></li>
+                  {% endif %}
+                  
+                  {% for i in fournisseurs.paginator.page_range %}
+                      {% if i == fournisseurs.number %}
+                          <li class="page-item active" aria-current="page">
+                              <span class="page-link">{{ i }}</span>
+                          </li>
+                      {% elif i > fournisseurs.number|add:"-4" and i < fournisseurs.number|add:4 %}
+                          <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                      {% endif %}
+                  {% endfor %}
+                  
+                  {% if fournisseurs.number|add:2 < fournisseurs.paginator.num_pages %}
+                      <li class="page-item disabled"><span class="page-link">...</span></li>
+                  {% endif %}
+                  
+                  {% if fournisseurs.has_next %}
+                      <li class="page-item"><a class="page-link" href="?page={{ fournisseurs.next_page_number }}">Suivant</a></li>
+                     
+                  {% endif %}
+              </ul>
+          </nav>
+          
+          
+          
+          
         </div>
     </div>
 </div>
