toggle panne for deactivation

--- a/templates/base.html
+++ b/templates/base.html
@@ -387,7 +387,11 @@
 
                     {% endblock %}
 
-                    {% block extra_js %}
+                    {% block extra_js_fournisseur %}
+
+                    {% endblock %}
+
+                    {% block extra_js_panne %}
 
                     {% endblock %}
 
