--- a/templates/fournisseur.html
+++ b/templates/fournisseur.html
@@ -240,7 +240,7 @@
 </div>
 {% endblock %}
 
-{% block extra_js %}
+{% block extra_js_fournisseur %}
 <script>
   window.onload = function() {
     // Récupérer le formulaire
