--- a/templates/panne.html
+++ b/templates/panne.html
@@ -44,11 +44,45 @@
                                 </form>
                             </td>
                             <td>
-                                <a href="#" class="btn btn-primary">Détails</a>
+                                <!-- bouton qui déclenche le modal -->
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#panneDetailsModal-{{ panne.id }}">
+                                    Détails
+                                </button>
                             </td>
                         </tr>
 
-                        <!-- Modal -->
+                       <!-- Modal pour les détails de la panne -->
+<div class="modal fade" id="panneDetailsModal-{{ panne.id }}" tabindex="-1" role="dialog" aria-labelledby="panneDetailsModalLabel-{{ panne.id }}" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title" id="panneDetailsModalLabel-{{ panne.id }}">Détails de la panne</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body">
+              <!-- Contenu du modal avec plus de détails sur la panne -->
+              <h6 class="font-weight-bold">Nom du matériel: </h6>
+              <p>{{ panne.materiel.nomMateriel }}</p>
+              <h6 class="font-weight-bold">Numéro de série: </h6>
+              <p>{{ panne.materiel.NumSerie }}</p>
+              <h6 class="font-weight-bold">Date de la panne: </h6>
+              <p>{{ panne.date_panne }}</p>
+              <h6 class="font-weight-bold">Description de la panne: </h6>
+              <p>{{ panne.description }}</p>
+              <h6 class="font-weight-bold">Résolue: </h6>
+              <p>{% if panne.resolue %}Oui{% else %}Non{% endif %}</p>
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+          </div>
+      </div>
+  </div>
+</div>
+<!--End modal-->
+
+                        <!-- Modal de confirmation -->
                         <div class="modal fade" id="toggleConfirmationModal-{{ panne.id }}" tabindex="-1" role="dialog" aria-labelledby="toggleConfirmationModalLabel-{{ panne.id }}" aria-hidden="true">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
