--- a/templates/panne.html
+++ b/templates/panne.html
@@ -31,7 +31,7 @@
               </div>
               {% if search_query %}
               <div class="input-group-append">
-                  <a class="btn btn-danger" href="{% url 'fournisseurs' %}">
+                  <a class="btn btn-danger" href="{% url 'pannes' %}">
                       <i class="fas fa-times"></i>
                   </a>
               </div>
